--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,13 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+
+    //Dagger Hilt y Kapt
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
+
+    //Firebase
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -57,6 +64,9 @@ dependencies {
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3'
+
+    implementation 'androidx.compose.material:material-icons-extended-android:1.5.4'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -64,4 +74,34 @@ dependencies {
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
+
+
+    implementation 'androidx.compose.runtime:runtime-livedata:1.5.4'
+
+    implementation 'androidx.navigation:navigation-compose:2.5.3'
+
+//Gson
+    implementation 'com.google.code.gson:gson:2.9.0'
+
+//Dagger Hilt y Kapt
+    implementation("com.google.dagger:hilt-android:2.44")
+    kapt("com.google.dagger:hilt-android-compiler:2.44")
+
+
+//Coil
+    implementation 'io.coil-kt:coil-compose:1.3.2'
+
+
+// Retrofit
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+
+
+// Firebase
+    implementation platform('com.google.firebase:firebase-bom:31.3.0')
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.firebase:firebase-auth-ktx'
+    implementation 'com.google.firebase:firebase-firestore-ktx'
+    implementation 'com.google.firebase:firebase-storage-ktx'
+
 }
